@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-16T08:25:50Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_prev_day_inc" : 1,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-17T01:38:13Z",
+  "count" : 2,
+  "count_minmax" : [ 1, 2 ],
+  "count_decinc" : [ -0, +1 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
-  "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_decinc" : [ -0, +0 ]
 }
