@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-16T08:25:50Z",
+  "timestamp" : "2022-05-17T01:38:13Z",
   "count_outdated" : 1828,
   "uniques_outdated" : 366,
-  "count" : 2112,
+  "count" : 2113,
   "uniques" : 404,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
