@@ -1,5 +1,5 @@
 {
-  "count": 284,
+  "count": 285,
   "uniques": 20,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
