@@ -1,3 +1,10 @@
+2022-05-17T01:38:13Z:
+* notice: last 14d: all unq: 285 20
+* notice: prev accum: outdated-all outdated-unq / all unq: 1828 366 / 2112 404
+* notice: next accum: outdated-all outdated-unq / all unq: 1828 366 / 2113 404
+* notice: prev exec diff / last date diff: unq all: +0 +1 -0 -0 / +0 +1 -0 -0
+* notice: changed dates: [2022-05-16]
+
 2022-05-16T08:25:50Z:
 * notice: last 14d: all unq: 284 20
 * notice: prev accum: outdated-all outdated-unq / all unq: 1827 365 / 2111 403
